# postnikov_rest

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  спросить постникова
app/: Dockerfile  main.py  metrics.py
app/database/: connections.py  executions.py
app/database/scripts/: init.sql  insert.sql
migrations/: 000001_init.down.sql  000001_init.up.sql
src/: main.py
src/api/: __init__.py  users.py
src/database/: postgres.py  users.py
src/database/scripts/: init.sql  insert.sql
src/database/scripts/users/: delete.sql  insert.sql  select_all.sql  select_by_id.sql  update.sql
src/models/: users.py
stash/: models.py
