[tool.poetry]
name = "postnikov-rest"
version = "0.1.0"
description = ""
authors = ["DaOneme <hellofkmail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.11"
matplotlib = "^3.10.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
