[tool.poetry]
name = "postnikov-rest"
version = "0.1.0"
description = ""
authors = ["DaOneme <hellofkmail@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.11"
dotenv = "^0.9.9"
pydantic-extra-types = "^2.11.1"
pydantic = {extras = ["email"], version = "^2.13.2"}
phonenumbers = "^9.0.28"
uvicorn = "^0.46.0"
fastapi = "^0.136.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
